set flex shrink to prevent checkbox from squashing

--- a/src/scss/components/_checkboxes.scss
+++ b/src/scss/components/_checkboxes.scss
@@ -30,6 +30,7 @@
     margin-right: $spacing-2;
     margin-top: $spacing-1;
     border: 1px solid currentColor;
+    flex-shrink: 0;
   }
 }
 
